fix(users, toast): improve default avatar and fix toast overflow

--- a/src/components/ui/Toast/ToastMessage.module.css
+++ b/src/components/ui/Toast/ToastMessage.module.css
@@ -1,6 +1,6 @@
 .toast {
   width: 453px;
-  height: 50px;
+  height: 100%;
   display: flex;
   gap: 10px;
   padding: 16px;
